# mcp-sdk

./: .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  COMMIT_EXAMPLES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml  python.yml  release.yml  typescript.yml
config/: default_rules.yaml
crates/mcp-agent/: Cargo.toml  README.md
crates/mcp-agent/src/: agent.rs  client.rs  lib.rs  service.rs
crates/mcp-agent/src/transport/: mod.rs  sse.rs  stdio.rs
crates/mcp-codegen/: Cargo.toml
crates/mcp-codegen/src/: lib.rs
crates/mcp-gateway/: Cargo.toml  README.md
crates/mcp-gateway/src/: errors.rs  lib.rs  router.rs
crates/mcp-kit/: Cargo.toml
crates/mcp-kit/src/: prompt.rs  protocol.rs  resource.rs  tool.rs
docs/: README.md  TODO.md  api-reference.md  deployment.md  development.md  examples.md  index.md  roadmap.md  troubleshooting.md  user-guide.md
docs/development/: pre-commit.md
docs/project-status/: DOCUMENTATION_COMPLETED.md  PHASE1_COMPLETED.md  PHASE2_COMPLETED.md  PHASE3_COMPLETED.md  README.md
examples/: README.md  a2a_delegation.py  active_inference_demo.py  b2c_support_agent.py  combined_features_demo.py  mcp_server.py  rules.yaml  rules_showcase.py
examples/agent/: Cargo.toml
examples/agent/src/: clients.rs  sse.rs  stdio.rs  stdio_integration.rs
examples/agents/: Cargo.toml
examples/agents/src/: agents.rs  sse.rs  stdio.rs  stdio_integration.rs
examples/bifrost/: main.go
examples/codegen/: Cargo.toml
examples/codegen/src/: calculator.rs
examples/gateway/: Cargo.toml
examples/gateway/src/: actix_web.rs  axum.rs  counter_gateway.rs  counter_server.rs  wasi_std_io.rs
examples/gateway/src/common/: counter.rs
mcp-core-rust/: Cargo.toml  build.rs
mcp-core-rust/proto/: plugin.proto
mcp-core-rust/src/: api.rs  main.rs  observability.rs
mcp-core-rust/src/actor/: inference.rs  manager.rs  mod.rs  registry.rs  rpc.rs  scaffold.rs
mcp-core-rust/src/memory/: mod.rs  redis.rs  vector.rs
mcp-core-rust/src/sandbox/: wasm.rs
mcp_sdk/: __init__.py  types.py
mcp_sdk/agents/: __init__.py  base.py  registry.py  types.py
mcp_sdk/channels/: __init__.py  base.py
mcp_sdk/cli/: __init__.py  main.py
mcp_sdk/client/: session.py
mcp_sdk/core/: __init__.py  compression.py  config.py  error_handling.py  exceptions.py  executor.py  monitoring.py  negotiator.py  performance.py  plugin.py  plugin_manager.py  protocol.py  protoconf.py  registry.py  retry.py  rpc_client.py  state.py  streaming.py  worker.py
mcp_sdk/knowledge/: __init__.py  graph.py
mcp_sdk/memory/: __init__.py  scaffold.py  store.py
mcp_sdk/orchestrator/: __init__.py  manager.py
mcp_sdk/plugins/active_inference/: __init__.py  active_inference.py  inquiry.py
mcp_sdk/plugins/anomaly/: __init__.py  detector.py
mcp_sdk/plugins/auth/: __init__.py  manager.py  mcp_i.py  plugin.py  plugin.yaml
mcp_sdk/plugins/auth/tools/: rbac.py  tokens.py
mcp_sdk/plugins/context/: __init__.py  manager.py
mcp_sdk/plugins/geospatial/: __init__.py  chunker.py  digital_twin.py  jepa.py  lgm.py  model.py  myceloom.py  substrate.py  terrakit.py
mcp_sdk/plugins/github/: plugin.py  plugin.yaml
mcp_sdk/plugins/github/tools/: __init__.py  create_issue.py
mcp_sdk/plugins/i18n/: __init__.py  manager.py
mcp_sdk/plugins/knowledge/: plugin.py  plugin.yaml
mcp_sdk/plugins/loop/: __init__.py  engine.py
mcp_sdk/plugins/metadata/: __init__.py  plugin.yaml  registry.py  schemas.py
mcp_sdk/plugins/security/: __init__.py  scanner.py
mcp_sdk/plugins/taxonomy/: __init__.py  classifier.py
mcp_sdk/plugins/thinking/: __init__.py  engine.py
mcp_sdk/rules/: __init__.py  builder.py  engine.py
mcp_sdk/security/: auth.py  middleware.py
mcp_sdk/server/: __init__.py  models.py
mcp_sdk/tools/: __init__.py  registry.py
mcp_sdk/transport/: __init__.py  http.py
scripts/: fix_typing.py  generate_proto.py  mock_mcp.py  setup-dev.sh  setup-pre-commit.sh  smoke_test.py  smoke_test_plugins.py  verify.py
servers/: .npmrc  CONTRIBUTING.md  README.md  SECURITY.md  package.json
servers/src/aws-kb-retrieval-server/: README.md  index.ts  package.json
servers/src/brave-search/: README.md  index.ts  package.json
servers/src/everart/: README.md  index.ts  package.json
servers/src/everything/: README.md  everything.ts  index.ts  package.json  sse.ts
servers/src/fetch/: README.md  pyproject.toml
servers/src/filesystem/: README.md  index.ts  package.json
servers/src/gdrive/: README.md  index.ts  package.json
servers/src/git/: LICENSE  README.md  pyproject.toml
servers/src/github/: README.md  index.ts  package.json
servers/src/gitlab/: README.md  index.ts  package.json
servers/src/google-maps/: README.md  index.ts  package.json
servers/src/memory/: README.md  index.ts  package.json
servers/src/postgres/: README.md  index.ts  package.json
servers/src/puppeteer/: README.md  index.ts  package.json
servers/src/redis/: README.md  package.json
servers/src/sentry/: README.md
servers/src/sequentialthinking/: README.md  index.ts  package.json
servers/src/slack/: README.md  index.ts  package.json
servers/src/time/: README.md  pyproject.toml
templates/: main.py
templates/core/: hooks_template.py
templates/plugins/: __init__.py
templates/plugins/plugin_a/: plugin.py
tests/: test_agent_orchestration.py  test_agents.py  test_anomaly.py  test_auth.py  test_auth_migration.py  test_context.py  test_geospatial.py  test_i18n.py  test_inference.py  test_knowledge.py  test_loop.py  test_memory.py  test_orchestrator.py  test_plugin_install.py  test_plugin_isolation.py  test_plugin_phase2.py  test_plugin_phase3.py  test_plugin_system.py  test_rules.py  test_scaffold_inference.py  test_security.py  test_taxonomy.py  test_thinking.py  test_tool_discovery.py
tests/integration/: test_agent_lifecycle.py  test_mcp_protocol.py  test_plugin_system.py
(+5 files in other folders)
