[package]
name = "mcp-core-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-rt = "2.11.0"
actix-web = "4.13.0"
anyhow = "1.0.102"
env_logger = "0.11.9"
log = "0.4.29"
opentelemetry = "0.31.0"
prost = "0.14.3"
qdrant-client = "1.17.0"
redis = { version = "1.0.4", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
wasmtime = "42.0.1"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
