[package]
name = "mcp-agent-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mcp-agent = { path = "../../crates/mcp-agent" }
mcp-kit = { path = "../../crates/mcp-kit" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
futures = "0.3"
anyhow = "1.0"

[[example]]
name = "clients"
path = "src/clients.rs"

[[example]]
name = "sse"
path = "src/sse.rs"

[[example]]
name = "stdio"
path = "src/stdio.rs"

[[example]]
name = "stdio_integration"
path = "src/stdio_integration.rs"
