[package]
name = "mcp-codegen-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mcp-kit = { path = "../../crates/mcp-kit" }
mcp-codegen = { path = "../../crates/mcp-codegen" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
schemars = "0.8"

[[example]]
name = "calculator"
path = "src/calculator.rs"
