[package]
name = "mcp-gateway-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mcp-gateway = { path = "../../crates/mcp-gateway" }
mcp-kit = { path = "../../crates/mcp-kit" }
mcp-codegen = { path = "../../crates/mcp-codegen" }
tokio = { version = "1", features = ["io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"

[dev-dependencies]
tokio-util = { version = "0.7", features = ["io", "codec"] }
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
actix-web = "4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { version = "1", features = ["io-util", "rt", "time", "codegen"] }
wasi = "0.11.0"

[[example]]
name = "counter-gateway"
path = "src/counter_gateway.rs"

[[example]]
name = "axum"
path = "src/axum.rs"

[[example]]
name = "wasi_std_io"
path = "src/wasi_std_io.rs"

[[example]]
name = "actix_web"
path = "src/actix_web.rs"